Fixed arrow button to properly align pages on mobile

--- a/official_full_ishan_baliyan_website/src/app.scss
+++ b/official_full_ishan_baliyan_website/src/app.scss
@@ -15,7 +15,7 @@
             bottom: 0;
             margin-bottom: 0;
             padding-bottom: 0;
-            height: calc(100vh - 45px);
+            height: calc(100vh - 60px);
             top: 60px;
         }
 
