--- a/official_full_ishan_baliyan_website/src/components/contact/contact.scss
+++ b/official_full_ishan_baliyan_website/src/components/contact/contact.scss
@@ -6,7 +6,7 @@
 
     @include mobile {
         flex-direction: column; // rearrange the info to a vertical format for mobile
-        overflow: hidden;
+        overflow: -moz-hidden-unscrollable;
     }
 
     .left{
@@ -52,6 +52,7 @@
             @include mobile{
                 justify-content:unset;
                 margin: 10px;
+                overflow: hidden;
             }
 
             input{
@@ -62,6 +63,7 @@
                 @include mobile{
                     width: 80%;
                     height: 10%;
+                    overflow: hidden;
                 }
             }
 
