--- a/official_full_ishan_baliyan_website/src/components/intro/intro.scss
+++ b/official_full_ishan_baliyan_website/src/components/intro/intro.scss
@@ -121,7 +121,7 @@
             bottom: 10px;
 
             @include mobile{
-                bottom: 3rem;
+                bottom: 4rem;
                 margin-left: auto;
                 margin-right: auto;
                 left: 0;
